--- a/website/main.html
+++ b/website/main.html
@@ -1,18 +1,27 @@
 <html>
+
 <script src="./laptop/laptop.js"></script>
 <link rel="stylesheet" href="./laptop/laptop.css">
 <link rel="stylesheet" href="./Main.css">
 <link rel="stylesheet" href="./particles/bg_particlejs.css">
 <script src="https://cdn.jsdelivr.net/npm/particles.js@2.0.0/particles.min.js"></script>
 <script src="./particles/bg_particlejs.js"></script>
-<script src="./main.js"></script>
+
 <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
 
 
+<head><audio id="audio">
+   <source src="./site/asset/audio.mp3" type="audio/mpeg">
+      </audio>
+
+    <script src="./main.js"></script>
+</head>
 
 <body>
     <div class="box " id="particles-js" style="z-index: 0">
-        <div class="box stack-top" id="particles-js1" style="z-index: 1">
+        <div class="box stack-top" id="particles-js1" style="z-index: 1" onmousemove="
+
+        playAudio()">
 
             <div id="switch" class="switch" style="z-index: 2">
 
@@ -22,8 +31,7 @@
                      <input type="checkbox" onchange="toggle(this)" >
                      <span class="switch-left">On</span>
                      <span class="switch-right">Off</span>
-                  </label>
-
+                  </label> re
                 </div>
 
 
@@ -40,7 +48,7 @@
             <div id="overlaytext" class="py-5">
                 <br>
                 <h1>
-                    <a href="" class="typewrite" data-period="2000" data-type='[ "Hello World !", "Welcome to my world !", "Switch on the button (top right) to know more" ]'>
+                    <a href="" class="typewrite" data-period="2000" data-type='[ "Hello !", "Welcome to my world !", "Switch on the button (top right) to know more" ]'>
                         <span class="wrap"></span>
                     </a>
                 </h1>
@@ -109,7 +117,7 @@
                   </g>
                </g>
             </svg>
-                <iframe id="frame" class="Main" src="./site/site.html" style="z-index: 15" scolling="true"></iframe>
+                <iframe id="frame" class="Main" src="./site/site.html#Home" style="z-index: 15" scolling="true"></iframe>
             </div>
 
 
@@ -131,12 +139,19 @@
       https://www.google.com/url?sa=i&url=http%3A%2F%2Fwww.directautodealersupplies.com%2Fproduct%2F7-1-2-number-stickers-fluorescent-green-numbers-w-black-background%2F&psig=AOvVaw2q9KUV5K6ELH5NLhoE8kHP&ust=1615032942398000&source=images&cd=vfe&ved=0CAIQjRxqFwoTCIi-3dqQme8CFQAAAAAdAAAAABAK
       http://www.directautodealersupplies.com/product/7-1-2-number-stickers-fluorescent-green-numbers-w-black-background/
       https://codepen.io/hi-im-si/pen/DHoup
-https://codepen.io/samgordon/pen/jPqqWB
-
+      https://codepen.io/samgordon/pen/jPqqWB
+      https://stackoverflow.com/questions/17418118/three-js-cube-with-different-texture-on-each-face
       https://codepen.io/milanraring/pen/KKwRBQp
       https://codepen.io/marcusconnor/pen/QJNvMa
+      https://codepen.io/franksLaboratory/pen/dyYGMwQ
+      https://codepen.io/animatedcreativity/pen/wOqBQr
+      https://codepen.io/hexagoncircle/pen/XWbWKwL
+      https://codepen.io/hexagoncircle/pen/XWbWKwL
+      https://www.youtube.com/watch?v=cL_dytFgasA
+https://jsfiddle.net/m1erickson/mQFDB/
+https://codepen.io/CheeseTurtle/pen/jzdgI
 
-https://codepen.io/animatedcreativity/pen/wOqBQr
+      
    </p> -->
 
 </body>
